--- a/data-raw/inst/_Model_Report_Template.Rmd
+++ b/data-raw/inst/_Model_Report_Template.Rmd
@@ -2,13 +2,14 @@
 output: html_document
 ---
 
+\blandscape
 {{section_ttl_1L_chr}}
+
 
 ```{r, include=FALSE}
 paths_to_mdl_plts_chr <- paste0({{path_to_mdl_1L_chr}} %>% stringr::str_sub(end=-5), 
                                 paste0("_",c("coefs","hetg", "dnst","sctr_plt"),".png"))
 ```
-
 ```{r echo = F, results="asis"}
 brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS({{path_to_mdl_1L_chr}}),
                                             label_stub_1L_chr = {{label_stub_1L_chr}},
@@ -16,7 +17,8 @@ brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS({{path_to_mdl_1L_ch
                                             output_type_1L_chr = {{output_type_1L_chr}}) 
 rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
 ```
-
+\elandscape
+\newpage
 ```{r, fig.cap={{plt_nms_chr}}, echo=FALSE, message=F}
 knitr::include_graphics(paths_to_mdl_plts_chr)
 ```
