--- a/vignettes/Child_RMDs/_AQoL_6D_Replication_Mixed.RMD
+++ b/vignettes/Child_RMDs/_AQoL_6D_Replication_Mixed.RMD
@@ -2,7 +2,10 @@
 title: "AQoL 6D Model Summary"
 author: "Matthew Hamilton & Caroline Gao"
 date: "24/10/2020"
-output: html_document
+output:
+  html_document: 
+    code_folding: "hide"
+    toc: yes 
 ---
 
 ```{r setup, include=FALSE}
@@ -16,54 +19,66 @@ library(magrittr)
 data_tb <- transform_raw_aqol_tb_to_aqol6d_tb(readRDS("../Data/fake_pop_tb.rds"))
 ```
 
+```{r}
+mdl_smry_dir_1L_chr <- "../../../../../../../Data/Project/Utility_Models"
+mdl_types_chr <- c("GSN_LOG","CLL_TFN")
+predictor_vars_nms_ls <- purrr::map(c("BADS","GAD7","K6","OASIS","PHQ9","SCARED"),~c(.x,"SOFAS"))
+fn_ls <- list(fit_gsn_log_lnk,fit_clg_log_tfmn)
+mdl_nms_ls <- predictor_vars_nms_ls %>% purrr::map(~make_mdl_nms_ls(list(.x),
+                              mdl_types_chr = mdl_types_chr)) %>% 
+  purrr::flatten()
+#mdl_nm_chr <- paste0(predictor_vars_nms_ls[[1]][1],"_",mdl_types_chr)
+```
 
-# ```{r, results="asis"}
-# mdls_smry_tb <- purrr::map2_dfr(list(fit_gsn_log_lnk,fit_clg_log_tfmn),
-#                                 paste0("PHQ9",c("_GSN_LOG","_CLL_TFN")),
-#                                 ~ {
-#                                   tb <- make_smry_of_ts_mdl(data_tb = data_tb,
-#                                                        fn = .x,
+```{r, results="asis"}
+mdls_smry_tb <- purrr::map_dfr(1:length(mdl_nms_ls),
+                                ~ {
+                                  idx_1L_int <- .x
+                                    purrr::map2_dfr(fn_ls,
+                                                    mdl_nms_ls[[idx_1L_int]],
+                                                    ~ {
+                                                      tb <- make_smry_of_ts_mdl(data_tb = data_tb,
+                                                       fn = .x,
+                                                       predictor_vars_nms_chr = predictor_vars_nms_ls[[idx_1L_int]],
+                                                       mdl_nm_1L_chr = .y,
+                                                       path_to_write_to_1L_chr = mdl_smry_dir_1L_chr,
+                                                       iters_1L_int = 4000L,
+                                                       seed_1L_int = 1000L)
+                                                      Sys.sleep(15)
+                                                      tb
+                                  })
+                                })
+  
+
+```
+
+
+
+
+# ```{r results="asis"}
+# tb_2 <- make_smry_of_ts_mdl(data_tb = data_tb,
+#                                                        fn = fn_ls[[2]],
 #                                                        predictor_vars_nms_chr = c("PHQ9","SOFAS"),
-#                                                        mdl_nm_1L_chr = .y,
+#                                                        mdl_nm_1L_chr = mdl_nm_chr[2],
 #                                                        path_to_write_to_1L_chr = "../../../../../../../Data/Project/Utility_Models",
 #                                                        iters_1L_int = 4000L,
 #                                                        seed_1L_int = 1000L)
-#                                   Sys.sleep(5)
-#                                   tb
-#                                   }
-# )
 # ```
-
-```{r}
-fn_ls <- list(fit_gsn_log_lnk,fit_clg_log_tfmn)
-mdl_nm_chr <- paste0("PHQ9",c("_GSN_LOG","_CLL_TFN"))
-```
-
-
-```{r results="asis"}
-tb_2 <- make_smry_of_ts_mdl(data_tb = data_tb,
-                                                       fn = fn_ls[[2]],
-                                                       predictor_vars_nms_chr = c("PHQ9","SOFAS"),
-                                                       mdl_nm_1L_chr = mdl_nm_chr[2],
-                                                       path_to_write_to_1L_chr = "../../../../../../../Data/Project/Utility_Models",
-                                                       iters_1L_int = 4000L,
-                                                       seed_1L_int = 1000L)
-```
-
-```{r}
-tb_2
-```
-
-```{r results="asis"}
-tb_1 <- make_smry_of_ts_mdl(data_tb = data_tb,
-                                                       fn = fn_ls[[1]],
-                                                       predictor_vars_nms_chr = c("PHQ9","SOFAS"),
-                                                       mdl_nm_1L_chr = mdl_nm_chr[1],
-                                                       path_to_write_to_1L_chr = "../../../../../../../Data/Project/Utility_Models",
-                                                       iters_1L_int = 4000L,
-                                                       seed_1L_int = 1000L)
-```
-```{r}
-tb_1
-```
+# 
+# ```{r}
+# tb_2
+# ```
+# 
+# ```{r results="asis"}
+# tb_1 <- make_smry_of_ts_mdl(data_tb = data_tb,
+#                                                        fn = fn_ls[[1]],
+#                                                        predictor_vars_nms_chr = c("PHQ9","SOFAS"),
+#                                                        mdl_nm_1L_chr = mdl_nm_chr[1],
+#                                                        path_to_write_to_1L_chr = "../../../../../../../Data/Project/Utility_Models",
+#                                                        iters_1L_int = 4000L,
+#                                                        seed_1L_int = 1000L)
+# ```
+# ```{r}
+# tb_1
+# ```
 
