--- a/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
+++ b/vignettes/Child_RMDs/AQoL_6D_Replication_Fns.Rmd
@@ -29,7 +29,7 @@ output: html_document
 ```{r}
 # smry_of_gsn_log_mdl_1 <- write_and_make_smry_of_ts_mdl(data_tb = Baseline_follow,
 #                                                        fn = fit_gsn_log_lnk,
-#                                                        predictor_vars_nms_chr = c("PHQ9","SOFAS"),
+#                                                        predr_vars_nms_chr = c("PHQ9","SOFAS"),
 #                                                        mdl_nm_1L_chr = "PHQ9_GSN_LOG",
 #                                                        path_to_data_dir_1L_chr = "../../../../../../../Data/R_Format/Utility_Models",
 #                                                        iters_1L_int = 4000L,
@@ -47,14 +47,14 @@ output: html_document
 # #         re_formula = NA)
 # # pred_1_dbl <- pred_1_tb[,1]
 # pred_2_dbl <- predict_from_mdl_coefs(smry_of_gsn_log_mdl_1,
-#                        new_data_tb = new_data_tb %>% transform_tb_to_mdl_inp(predictor_vars_nms_chr = c("PHQ9","SOFAS")))
+#                        new_data_tb = new_data_tb %>% transform_tb_to_mdl_inp(predr_vars_nms_chr = c("PHQ9","SOFAS")))
  
 ```
 
 ```{r}
 # smry_of_clg_log_tfmn_mdl_1 <- write_and_make_smry_of_ts_mdl(data_tb = Baseline_follow,
 #                                                        fn = fit_clg_log_tfmn,
-#                                                        predictor_vars_nms_chr = c("PHQ9","SOFAS"),
+#                                                        predr_vars_nms_chr = c("PHQ9","SOFAS"),
 #                                                        mdl_nm_1L_chr = "PHQ9_CLL_TFN",
 #                                                        path_to_data_dir_1L_chr = "../../../../../../../Data/R_Format/Utility_Models",
 #                                                        iters_1L_int = 4000L,
