Increment version number

--- a/vignettes/test.Rmd
+++ b/vignettes/test.Rmd
@@ -23,7 +23,7 @@ options(xtable.timestamp = "")
 ```{r echo=FALSE}
 predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = c("BADS","GAD7","K6","OASIS","PHQ9","SCARED"),
                        covars_ls = list("SOFAS"))
-knit_pars_ls <- make_knit_pars_ls(mdl_smry_dir_1L_chr = params$mdl_smry_dir_1L_chr, # path_to_write_to_1L_chr
+knit_pars_ls <- make_knit_pars_ls(mdl_smry_dir_1L_chr = params$mdl_smry_dir_1L_chr,
                   mdl_types_chr = c("GSN_LOG","CLL_TFN"),
                   predr_vars_nms_ls = predr_vars_nms_ls,
                   output_type_1L_chr = params$output_type_1L_chr
@@ -31,8 +31,8 @@ knit_pars_ls <- make_knit_pars_ls(mdl_smry_dir_1L_chr = params$mdl_smry_dir_1L_c
 ```
 
 ```{r, echo=FALSE, results='asis'}
-knit_mdl_rprt(knit_pars_ls[[1]])
- # knit_pars_ls %>%
- #  purrr::walk(~knit_mdl_rprt(.x))
+#knit_mdl_rprt(knit_pars_ls[[11]])
+ knit_pars_ls %>%
+  purrr::walk(~knit_mdl_rprt(.x))
 ```
 
