--- a/data-raw/inst/_Model_Report_Template.Rmd
+++ b/data-raw/inst/_Model_Report_Template.Rmd
@@ -3,8 +3,8 @@ output: html_document
 ---
 
 \blandscape
-{{section_ttl_1L_chr}}
 
+{{section_ttl_1L_chr}}
 
 ```{r, include=FALSE}
 paths_to_mdl_plts_chr <- paste0({{path_to_mdl_1L_chr}} %>% stringr::str_sub(end=-5), 
@@ -12,12 +12,16 @@ paths_to_mdl_plts_chr <- paste0({{path_to_mdl_1L_chr}} %>% stringr::str_sub(end=
 include_plots_lgl <- paths_to_mdl_plts_chr %>% purrr::map_lgl(~file.exists(.x))
 paths_to_mdl_plts_chr <- paths_to_mdl_plts_chr[include_plots_lgl]
 plt_nms_chr <- {{plt_nms_chr}}[include_plots_lgl]
+if(identical(include_plots_lgl[1:2],c(T,F))){
+  plt_nms_chr[1] <- plt_nms_chr[1] %>% stringr::str_replace("population level effects","population and group level effects")
+}
 ```
+
 ```{r echo = F, results="asis"}
 brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS({{path_to_mdl_1L_chr}}),
                                             label_stub_1L_chr = {{label_stub_1L_chr}},
-                                            caption_1L_chr = {{caption_1L_chr}}, 
-                                            output_type_1L_chr = {{output_type_1L_chr}}) 
+                                            caption_1L_chr = {{caption_1L_chr}},
+                                            output_type_1L_chr = {{output_type_1L_chr}})
 rlang::exec(print_table_xx,!!!brms_mdl_print_ls[[5]])
 ```
 \elandscape
@@ -27,4 +31,3 @@ knitr::include_graphics(paths_to_mdl_plts_chr)
 ```
 `r officer::run_pagebreak()`
 \newpage
-
