WIP to abstract first part of report

--- a/vignettes/Child_RMDs/_AQoL_6D_Replication_Mixed.RMD
+++ b/vignettes/Child_RMDs/_AQoL_6D_Replication_Mixed.RMD
@@ -1,7 +1,6 @@
 ---
 title: "AQoL 6D Model Summary"
-author: "Matthew Hamilton & Caroline Gao"
-date: "24/10/2020"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   word_document:
     toc: yes
