--- a/vignettes/Child_RMDs/Original_Analysis/_Reworked_First_Bit.Rmd
+++ b/vignettes/Child_RMDs/Original_Analysis/_Reworked_First_Bit.Rmd
@@ -5,6 +5,9 @@ output:
     code_folding: "hide"
     toc: yes 
   output: html_notebook
+params:
+  path_to_write_fls_to_1L_chr: "../../../../../../../../Data/Project/Utility_Models"
+  dir_nm_1L_chr: "One_Predr_Output"
 ---
 
 
@@ -268,7 +271,7 @@ baseline<-baseline %>%
 
 
 set.seed(12345)
-folds_10 <- createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
+# folds_10 <- caret::createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
 
 gather(baseline, variable, value, aqol6d_total_w, aqol6d_total_w_log,  aqol6d_total_w_logit,  aqol6d_total_w_loglog,aqol6d_total_w_cloglog) %>%
 mutate(variable = factor(variable, levels = c("aqol6d_total_w", 
@@ -368,31 +371,82 @@ purrr::map_dfr(folds_ls,
     dplyr::mutate(Model = mdl_nm_1L_chr) %>%
     dplyr::select(Model, dplyr::everything())
 }
+write_one_predr_mdl_plts <- function(data_tb,
+                                     mdl,
+                                     predr_var_nm_1L_chr,
+                                     predr_var_desc_1L_chr,
+                                     predr_vals_dbl,
+                                     path_to_write_to_1L_chr){
+  tfd_data_tb <- transform_data_tb_for_cmprsn(data_tb, mdl = mdl) 
+  predn_ds_tb <- make_predn_ds_with_one_predr(mdl, predr_var_nm_1L_chr = predr_var_nm_1L_chr, predr_vals_dbl = predr_vals_dbl)
+  purrr::pwalk(list(plt_fn_ls = list(plot_lnr_cmprsn, ggplot2::autoplot, plot_obsd_predd_dnst, plot_obsd_predd_dnst, plot_sctr_lnr_cmprsn),
+                 fn_args_ls_ls = list(list(data_tb = data_tb,
+                                        predn_ds_tb = predn_ds_tb,
+                                        predr_var_nm_1L_chr = predr_var_nm_1L_chr,
+                                        predr_var_desc_1L_chr = predr_var_desc_1L_chr),
+                                      list(mdl, 
+                                            which = 1:6, 
+                                            ncol = 3, 
+                                            label.size = 3),
+                                      list(tfd_data_tb = tfd_data_tb),
+                                      list(tfd_data_tb = transform_data_tb_for_cmprsn(data_tb, 
+                                                                                      mdl = mdl,
+                                                                                      tf_type_1L_chr = "Simulated"),
+                                           predd_val_var_nm_1L_chr = "Simulated"),
+                                      list(tfd_data_tb = tfd_data_tb)),
+                 plt_nm_sfx_chr = c("_lnr_cmprsn","_auto_plt","_pred_dnsty","_simd_dnsty","_pred_sctr")), 
+            ~ write_brm_mdl_plt_fl(plt_fn = ..1,
+                     fn_args_ls = ..2,
+                     path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                     plt_nm_1L_chr = paste0(predr_var_nm_1L_chr,
+                                            ..3)))
+  
+}
+write_one_predr_mdl_outp <- function(data_tb,
+                                     predr_var_nm_1L_chr, 
+                                     predr_var_desc_1L_chr,
+                                     predr_vals_dbl,
+                                     mdl_type_1L_chr = "lm",
+                                     path_to_write_to_1L_chr,
+                                     mdl_nm_1L_chr = "OLS (no transformation)",
+                                     mdl_fl_nm_1L_chr){
+  mdl <- make_one_predr_mdl(data_tb,predr_var_nm_1L_chr = predr_var_nm_1L_chr, mdl_type_1L_chr = mdl_type_1L_chr)
+  write_one_predr_mdl_plts(data_tb,
+                         mdl = mdl,
+                         predr_var_nm_1L_chr = predr_var_nm_1L_chr,
+                         predr_var_desc_1L_chr = predr_var_desc_1L_chr,
+                         predr_vals_dbl = predr_vals_dbl,
+                         path_to_write_to_1L_chr = path_to_write_to_1L_chr)
+make_smry_of_one_predr_mdl(data_tb,
+                           mdl,
+                           folds_ls,
+                           predr_var_nm_1L_chr = predr_var_nm_1L_chr,
+                           mdl_type_1L_chr = mdl_type_1L_chr,
+                           mdl_nm_1L_chr = mdl_nm_1L_chr)#
+saveRDS(mdl,paste0(path_to_write_to_1L_chr,"/",mdl_fl_nm_1L_chr,".RDS"))
+}
 ```
 
 ```{r}
-predr_var_nm_1L_chr = "PHQ9"
 data_tb <- baseline
-mdl <- make_one_predr_mdl(data_tb,predr_var_nm_1L_chr = predr_var_nm_1L_chr, mdl_type_1L_chr = "lm")
-summary(mdl)
-predn_ds_tb <- make_predn_ds_with_one_predr(mdl, predr_var_nm_1L_chr = predr_var_nm_1L_chr, predr_vals_dbl = 0:27)
-transform_data_tb_for_cmprsn(data_tb, mdl = mdl)
-plot_lnr_cmprsn(data_tb = data_tb,
-               predn_ds_tb = predn_ds_tb,
-               predr_var_nm_1L_chr = predr_var_nm_1L_chr,
-               predr_var_desc_1L_chr = "PHQ9 total score")
-ggplot2::autoplot(mdl, which = 1:6, ncol = 3, label.size = 3)
-tfd_data_tb <- transform_data_tb_for_cmprsn(data_tb, mdl = mdl) 
-tfd_data_tb %>%
-  plot_obsd_predd_dnst()
-transform_data_tb_for_cmprsn(data_tb, mdl = mdl, tf_type_1L_chr = "Simulated") %>%
-  plot_obsd_predd_dnst(predd_val_var_nm_1L_chr = "Simulated")
-tfd_data_tb %>%
-  plot_sctr_lnr_cmprsn()
-# transform_data_tb_for_cmprsn(data_tb, mdl = mdl, tf_type_1L_chr = "Simulated") %>%
-#   plot_sctr_lnr_cmprsn(predd_val_var_nm_1L_chr = "Simulated")
-make_smry_of_one_predr_mdl()#
+folds_ls <- caret::createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
+path_to_write_fls_to_1L_chr <- params$path_to_write_fls_to_1L_chr
+dir_nm_1L_chr <- params$dir_nm_1L_chr
+path_to_write_to_1L_chr <- paste0(path_to_write_fls_to_1L_chr,
+                                                      "/",
+                                                      dir_nm_1L_chr)
+#
+write_one_predr_mdl_outp(data_tb,
+                         predr_var_nm_1L_chr = "PHQ9", 
+                                     predr_var_desc_1L_chr = "PHQ9 total score",
+                                     predr_vals_dbl = 0:27,
+                                     mdl_type_1L_chr = "lm",
+                                     path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                                     mdl_nm_1L_chr = "OLS (no transformation)",
+                                     mdl_fl_nm_1L_chr = paste0(predr_var_nm_1L_chr,
+                           "_OLS_NOTF_MDL"))
 
+#summary(mdl)
 ```
 
 
